#5150 Replace the stale Collections APIs by Java 11 Collections APIs (#5151)